--- a/pom.xml
+++ b/pom.xml
@@ -69,4 +69,14 @@
         </plugins>
     </build>
 
+    <reporting>
+  <plugins>
+    <plugin>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>findbugs-maven-plugin</artifactId>
+      <version>3.0.4</version>
+    </plugin>
+  </plugins>
+</reporting>
+
 </project>
