--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.4.0</version>
+            <version>9.4.1211.jre7</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
