--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,6 @@
 applications:
   - name: springpong
     buildpack: java_buildpack
-    path: target/pong-matcher-spring-1.0.0.BUILD-SNAPSHOT.jar
+    path: target/pong-matcher-spring.jar
     services:
       - mysql
