--- a/manifest.yml
+++ b/manifest.yml
@@ -5,5 +5,6 @@ applications:
     path: target/pong-matcher-spring.jar
     timeout: 180
     memory: 1024M
+    buildpack: https://github.com/cloudfoundry/java-buildpack.git
     services:
       - mysql
